--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.5
   uuid: ^4.5.0
+  fl_chart: ^0.66.0
 
 dev_dependencies:
   flutter_test:
